changing the fonts

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
       );
     </script>
   </head>
-  <body class="font-arad bg-gray-100 dark:bg-zinc-800">
-    <!-- Icons -->
+  <body class="font-dana bg-gray-100 dark:bg-zinc-800">
+    <!--All App Icons -->
     <svg class="hidden">
       <symbol
         id="arrow-right-end-on-rectangle"
@@ -33,7 +33,6 @@
           d="M8.25 9V5.25A2.25 2.25 0 0 1 10.5 3h6a2.25 2.25 0 0 1 2.25 2.25v13.5A2.25 2.25 0 0 1 16.5 21h-6a2.25 2.25 0 0 1-2.25-2.25V15M12 9l3 3m0 0-3 3m3-3H2.25"
         />
       </symbol>
-
       <symbol
         id="moon"
         xmlns="http://www.w3.org/2000/svg"
@@ -310,7 +309,7 @@
         />
       </symbol>
     </svg>
-    <!-- Header -->
+    <!--App  Header -->
     <header
       class="fixed top-9 left-0 right-0 md:w-[98%] lg:w-[95%] xl:w-[90%] h-24 px-5 lg:px-10 py-5 hidden md:flex items-center rounded-3xl mx-auto bg-black/50 backdrop-blur-[6px]"
     >
@@ -324,7 +323,7 @@
           <ul
             class="flex gap-x-4 lg:gap-x-6 xl:gap-x-9 items-center text-xl text-gray-300 child-hover:text-orange-300 child-hover:transition-colors tracking-tightest child:h-14 child:leading-[56px]"
           >
-            <li class="text-orange-200 font-aradMedium">
+            <li class="text-orange-200 font-danaMedium">
               <a href="#">صفحه اصلی</a>
             </li>
             <!-- Has Sub Menu -->
@@ -332,7 +331,7 @@
               <a href="#">فروشگاه</a>
               <!-- Sub Menu -->
               <div
-                class="absolute top-full child:inline-block w-52 p-6 invisible group-hover:visible delay-75 transition-all rounded-xl bg-text-white border-t-[3px] border-orange-300 text-base text-zinc-700 dark:bg-zinc-700 dark:text-white space-y-4 tracking-normal shadow-normal child-hover:text-orange-300 child:transition-colors"
+                class="absolute top-full child:inline-block w-52 p-6 invisible group-hover:visible delay-75 transition-all rounded-xl bg-white border-t-[3px] border-orange-300 text-base text-zinc-700 dark:bg-zinc-700 dark:text-white space-y-4 tracking-normal shadow-normal child-hover:text-orange-300 child:transition-colors"
               >
                 <a href="#">قهوه</a>
                 <a href="#"> ویژه در سطح جهانی</a>
@@ -366,7 +365,7 @@
                 <div class="custom-rtl">
                   <!-- Cart Heading -->
                   <div
-                    class="font-aradMedium flex justify-between items-center tracking-tighter text-xs"
+                    class="font-danaMedium flex justify-between items-center tracking-tighter text-xs"
                   >
                     <span class="text-gray-300">۱ خرید</span>
                     <a
@@ -387,7 +386,7 @@
                       </div>
                       <div>
                         <h4
-                          class="w-64 text-zinc-700 dark:text-white line-clamp-2 font-aradMedium text-base tracking-normal mb-3"
+                          class="w-64 text-zinc-700 dark:text-white line-clamp-2 font-danaMedium text-base tracking-normal mb-3"
                         >
                           قهوه اسپرسو بن مانو مدل پریسکا مدل ۲۵۰ گرمی
                         </h4>
@@ -427,12 +426,12 @@
                           <!-- Product info -->
                           <div>
                             <span
-                              class="text-xs text-teal-600 dark:text-emerald-500 font-aradSemiBold tracking-tighter"
+                              class="text-xs text-teal-600 dark:text-emerald-500 font-danaSemiBold tracking-tighter"
                               >۱۴.۵۰۰ تومان تخفیف</span
                             >
                             <div>
                               ۱۷۵,۰۰۰
-                              <span class="text-sm font-arad">تومان</span>
+                              <span class="text-sm font-dana">تومان</span>
                             </div>
                           </div>
                         </div>
@@ -444,7 +443,7 @@
                       </div>
                       <div>
                         <h4
-                          class="w-64 text-zinc-700 dark:text-white line-clamp-2 font-aradMedium text-base tracking-normal mb-3"
+                          class="w-64 text-zinc-700 dark:text-white line-clamp-2 font-danaMedium text-base tracking-normal mb-3"
                         >
                           قهوه اسپرسو بن مانو مدل پریسکا مدل ۲۵۰ گرمی قهوه
                           اسپرسو بن مانو مدل پریسکا مدل ۲۵۰ گرمی
@@ -485,12 +484,12 @@
                           <!-- Product info -->
                           <div>
                             <span
-                              class="text-xs text-teal-600 dark:text-emerald-500 font-aradSemiBold tracking-tighter"
+                              class="text-xs text-teal-600 dark:text-emerald-500 font-danaSemiBold tracking-tighter"
                               >۱۴.۵۰۰ تومان تخفیف</span
                             >
                             <div>
                               ۱۷۵,۰۰۰
-                              <span class="text-sm font-arad">تومان</span>
+                              <span class="text-sm font-dana">تومان</span>
                             </div>
                           </div>
                         </div>
@@ -502,7 +501,7 @@
                       </div>
                       <div>
                         <h4
-                          class="w-64 text-zinc-700 dark:text-white line-clamp-2 font-aradMedium text-base tracking-normal mb-3"
+                          class="w-64 text-zinc-700 dark:text-white line-clamp-2 font-danaMedium text-base tracking-normal mb-3"
                         >
                           قهوه اسپرسو بن مانو مدل پریسکا مدل ۲۵۰ گرمی
                         </h4>
@@ -542,12 +541,12 @@
                           <!-- Product info -->
                           <div>
                             <span
-                              class="text-xs text-teal-600 dark:text-emerald-500 font-aradSemiBold tracking-tighter"
+                              class="text-xs text-teal-600 dark:text-emerald-500 font-danaSemiBold tracking-tighter"
                               >۱۴.۵۰۰ تومان تخفیف</span
                             >
                             <div>
                               ۱۷۵,۰۰۰
-                              <span class="text-sm font-arad">تومان</span>
+                              <span class="text-sm font-dana">تومان</span>
                             </div>
                           </div>
                         </div>
@@ -559,7 +558,7 @@
                       </div>
                       <div>
                         <h4
-                          class="w-64 text-zinc-700 dark:text-white line-clamp-2 font-aradMedium text-base tracking-normal mb-3"
+                          class="w-64 text-zinc-700 dark:text-white line-clamp-2 font-danaMedium text-base tracking-normal mb-3"
                         >
                           قهوه اسپرسو بن مانو مدل پریسکا مدل ۲۵۰ گرمی
                         </h4>
@@ -599,12 +598,12 @@
                           <!-- Product info -->
                           <div>
                             <span
-                              class="text-xs text-teal-600 dark:text-emerald-500 font-aradSemiBold tracking-tighter"
+                              class="text-xs text-teal-600 dark:text-emerald-500 font-danaSemiBold tracking-tighter"
                               >۱۴.۵۰۰ تومان تخفیف</span
                             >
                             <div>
                               ۱۷۵,۰۰۰
-                              <span class="text-sm font-arad">تومان</span>
+                              <span class="text-sm font-dana">تومان</span>
                             </div>
                           </div>
                         </div>
@@ -618,11 +617,11 @@
                         >مبلغ قابل پرداخت</span
                       >
                       <span class="">
-                        ۱۷۵,۰۰۰ <span class="text-sm font-arad">تومان</span>
+                        ۱۷۵,۰۰۰ <span class="text-sm font-dana">تومان</span>
                       </span>
                     </div>
                     <button
-                      class="bg-teal-600 dark:bg-emerald-500 hover:bg-teal-700 dark:hover:bg-emerald-600 text-white text-base tracking-tightest rounded-md py-2 px-3"
+                      class="bg-teal-600 dark:bg-emerald-500 hover:bg-teal-700 dark:hover:bg-emerald-600 text-white text-base tracking-tightest rounded-md py-2 px-4"
                     >
                       ثبت سفارش
                     </button>
@@ -656,7 +655,7 @@
         </div>
       </div>
     </header>
-    <!-- Header(under 764px) -->
+    <!--App Header(under 764px) -->
     <div
       class="flex md:hidden items-center justify-between h-16 w-full px-4 bg-white dark:bg-zinc-700"
     >
@@ -668,7 +667,7 @@
       </div>
       <!-- Nav Menu -->
       <div
-        class="nav-menu hidden fixed z-20 right-0 top-0 bg-white dark:bg-zinc-700 w-64 px-4 pt-3 pb-12 transition-all h-screen overflow-y-auto"
+        class="nav-menu fixed z-20 -right-64 top-0 bg-white dark:bg-zinc-700 w-64 px-4 pt-3 pb-12 transition-all h-screen overflow-y-auto"
       >
         <!-- Nav Menu Header -->
         <div class="flex justify-between items-center">
@@ -694,12 +693,12 @@
               ><span>صفحه اصلی</span></a
             >
           </div>
-          <ul
-            class="child:flex space-y-6 text-zinc-700 dark:text-white transition-all child:transition-colors"
-          >
+          <ul class="child:flex space-y-6 text-zinc-700 dark:text-white">
             <li class="flex-col">
               <div class="shop-title flex justify-between cursor-pointer">
-                <a class="inline-flex gap-x-2">
+                <a
+                  class="inline-flex gap-x-2 hover:text-orange-300 transition-colors"
+                >
                   <svg class="w-5 h-5">
                     <use href="#shopping-bag"></use></svg
                   >فروشگاه
@@ -720,26 +719,34 @@
                 <a href="#">قهوه زینو برزیلی</a>
               </div>
             </li>
-            <li class="items-center">
-              <a href="#" class="inline-flex gap-x-2 cursor-pointer"
+            <li class="items-center child-hover:text-orange-300">
+              <a
+                href="#"
+                class="inline-flex gap-x-2 cursor-pointer transition-colors"
                 ><svg class="w-5 h-5"><use href="#message"></use></svg
                 >دیکشنری</a
               >
             </li>
-            <li class="items-center">
-              <a href="#" class="inline-flex gap-x-2 cursor-pointer"
+            <li class="items-center child-hover:text-orange-300">
+              <a
+                href="#"
+                class="inline-flex gap-x-2 cursor-pointer transition-colors"
                 ><svg class="w-5 h-5"><use href="#briefcase"></use></svg>درباره
                 ما</a
               >
             </li>
-            <li class="items-center">
-              <a href="#" class="inline-flex gap-x-2 cursor-pointer"
+            <li class="items-center child-hover:text-orange-300">
+              <a
+                href="#"
+                class="inline-flex gap-x-2 cursor-pointer transition-colors"
                 ><svg class="w-5 h-5"><use href="#document-text"></use></svg
                 >بلاگ</a
               >
             </li>
-            <li class="items-center">
-              <a href="#" class="inline-flex gap-x-2 cursor-pointer"
+            <li class="items-center child-hover:text-orange-300">
+              <a
+                href="#"
+                class="inline-flex gap-x-2 cursor-pointer transition-colors"
                 ><svg class="w-5 h-5"><use href="#phone"></use></svg>تماس با
                 ما</a
               >
@@ -784,18 +791,179 @@
       <svg class="w-[100px] h-10">
         <use href="#logo-type"></use>
       </svg>
-      <!-- Shopping cart Icon -->
-      <div>
+      <!--  Cart Icon -->
+      <div class="cart-open-btn">
         <svg class="w-6 h-6 text-zinc-700 dark:text-white">
           <use href="#shopping-cart"></use>
         </svg>
-        <!--Shopping cart menu-->
-        <div class=""></div>
+        <!-- Cart Menu-->
+        <div
+          class="cart-menu flex flex-col fixed z-20 -left-64 top-0 bg-white dark:bg-zinc-700 w-64 px-3 pt-3 pb-5 transition-all h-screen overflow-y-auto"
+        >
+          <!-- Cart Menu Header -->
+          <div
+            class="flex justify-between items-center py-2 border-b border-gray-200 dark:border-white/10 child:text-zinc-700 child:dark:text-white"
+          >
+            <!-- Cart Close Btn -->
+            <div class="cart-close-btn cursor-pointer">
+              <svg class="w-5 h-5 dark:text-white">
+                <use href="#x-mark"></use>
+              </svg>
+            </div>
+            <span class="font-danaMedium">سبد خرید</span>
+          </div>
+          <!-- Cart Menu Body -->
+          <div
+            class="mb-3 dark:divide-white/10 custom-scrollbar-1-dark custom-scrollbar-1 overflow-y-scroll max-h-[465px]"
+          >
+            <div
+              class="custom-rtl child:py-5 child:flex child:items-center child:justify-between child:gap-x-2"
+            >
+              <div class="border-b border-gray-100 dark:border-white/10">
+                <div class="w-[90px] h-[90px]">
+                  <img src="images/products/p1.png" alt="product 1" />
+                </div>
+                <div>
+                  <h4
+                    class="w-32 text-zinc-700 dark:text-white line-clamp-3 font-danaMedium text-sm tracking-normal mb-1.5"
+                  >
+                    قهوه اسپرسو بن مانو مدل پریسکا مدل ۲۵۰ گرمی
+                  </h4>
+
+                  <!-- Product info -->
+                  <div>
+                    <span
+                      class="text-xs text-teal-600 dark:text-emerald-500 font-danaSemiBold tracking-tighter"
+                      >۱۴.۵۰۰ تومان تخفیف</span
+                    >
+                    <div class="text-zinc-700 dark:text-white">
+                      ۱۷۵,۰۰۰
+                      <span class="text-sm font-dana">تومان</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="border-b border-gray-100 dark:border-white/10">
+                <div class="w-[90px] h-[90px]">
+                  <img src="images/products/p2.png" alt="product 1" />
+                </div>
+                <div>
+                  <h4
+                    class="w-32 text-zinc-700 dark:text-white line-clamp-3 font-danaMedium text-sm tracking-normal mb-1.5"
+                  >
+                    قهوه اسپرسو بن مانو مدل پریسکا مدل ۲۵۰ گرمی
+                  </h4>
+
+                  <!-- Product info -->
+                  <div>
+                    <span
+                      class="text-xs text-teal-600 dark:text-emerald-500 font-danaSemiBold tracking-tighter"
+                      >۱۴.۵۰۰ تومان تخفیف</span
+                    >
+                    <div class="text-zinc-700 dark:text-white">
+                      ۱۷۵,۰۰۰
+                      <span class="text-sm font-dana">تومان</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="border-b border-gray-100 dark:border-white/10">
+                <div class="w-[90px] h-[90px]">
+                  <img src="images/products/p3.png" alt="product 1" />
+                </div>
+                <div>
+                  <h4
+                    class="w-32 text-zinc-700 dark:text-white line-clamp-3 font-danaMedium text-sm tracking-normal mb-1.5"
+                  >
+                    قهوه اسپرسو بن مانو مدل پریسکا مدل ۲۵۰ گرمی
+                  </h4>
+
+                  <!-- Product info -->
+                  <div>
+                    <span
+                      class="text-xs text-teal-600 dark:text-emerald-500 font-danaSemiBold tracking-tighter"
+                      >۱۴.۵۰۰ تومان تخفیف</span
+                    >
+                    <div class="text-zinc-700 dark:text-white">
+                      ۱۷۵,۰۰۰
+                      <span class="text-sm font-dana">تومان</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="border-b border-gray-100 dark:border-white/10">
+                <div class="w-[90px] h-[90px]">
+                  <img src="images/products/p4.png" alt="product 1" />
+                </div>
+                <div>
+                  <h4
+                    class="w-32 text-zinc-700 dark:text-white line-clamp-3 font-danaMedium text-sm tracking-normal mb-1.5"
+                  >
+                    قهوه اسپرسو بن مانو مدل پریسکا مدل ۲۵۰ گرمی
+                  </h4>
+
+                  <!-- Product info -->
+                  <div>
+                    <span
+                      class="text-xs text-teal-600 dark:text-emerald-500 font-danaSemiBold tracking-tighter"
+                      >۱۴.۵۰۰ تومان تخفیف</span
+                    >
+                    <div class="text-zinc-700 dark:text-white">
+                      ۱۷۵,۰۰۰
+                      <span class="text-sm font-dana">تومان</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="border-b border-gray-100 dark:border-white/10">
+                <div class="w-[90px] h-[90px]">
+                  <img src="images/products/p5.png" alt="product 1" />
+                </div>
+                <div>
+                  <h4
+                    class="w-32 text-zinc-700 dark:text-white line-clamp-3 font-danaMedium text-sm tracking-normal mb-1.5"
+                  >
+                    قهوه اسپرسو بن مانو مدل پریسکا مدل ۲۵۰ گرمی
+                  </h4>
+
+                  <!-- Product info -->
+                  <div>
+                    <span
+                      class="text-xs text-teal-600 dark:text-emerald-500 font-danaSemiBold tracking-tighter"
+                      >۱۴.۵۰۰ تومان تخفیف</span
+                    >
+                    <div class="text-zinc-700 dark:text-white">
+                      ۱۷۵,۰۰۰
+                      <span class="text-sm font-dana">تومان</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Cart Menu Footer -->
+          <div class="flex justify-between items-end mt-auto">
+            <button
+              class="bg-teal-600 dark:bg-emerald-500 hover:bg-teal-700 dark:hover:bg-emerald-600 text-white text-base tracking-tightest rounded-xl py-2 px-4"
+            >
+              ثبت سفارش
+            </button>
+            <div class="flex flex-col justify-between">
+              <span class="tracking-tighter text-xs text-gray-300"
+                >مبلغ قابل پرداخت</span
+              >
+              <span class="text-zinc-700 dark:text-white">
+                ۱۷۵,۰۰۰ <span class="text-sm font-dana">تومان</span>
+              </span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- overlay -->
     <div class="overlay"></div>
-
+    <!-- App Main -->
+    <div class="container"></div>
     <script type="text/javascript" src="./scripts/app.js"></script>
   </body>
 </html>
