--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       );
     </script>
   </head>
-  <body class="font-dana bg-gray-100 dark:bg-zinc-800">
+  <body class="font-dana bg-gray-100 dark:bg-zinc-800 h-[2200px]">
     <!--All App Icons -->
     <svg class="hidden">
       <symbol
@@ -308,10 +308,18 @@
           d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 0 0 .75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 0 0-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0 1 12 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 0 1-.673-.38m0 0A2.18 2.18 0 0 1 3 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 0 1 3.413-.387m7.5 0V5.25A2.25 2.25 0 0 0 13.5 3h-3a2.25 2.25 0 0 0-2.25 2.25v.894m7.5 0a48.667 48.667 0 0 0-7.5 0M12 12.75h.008v.008H12v-.008Z"
         />
       </symbol>
+      <symbol
+        id="curve"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 100 22"
+        fill="currentColor"
+      >
+        <path d="M50 0C69 0 81 22 100 22L0 22C18.75 22 31 0 50 0Z" />
+      </symbol>
     </svg>
     <!--App  Header -->
     <header
-      class="fixed top-9 left-0 right-0 md:w-[98%] lg:w-[95%] xl:w-[90%] h-24 px-5 lg:px-10 py-5 hidden md:flex items-center rounded-3xl mx-auto bg-black/50 backdrop-blur-[6px]"
+      class="fixed z-50 top-9 left-0 right-0 md:w-[98%] lg:w-[95%] xl:w-[90%] h-24 px-5 lg:px-10 py-5 hidden md:flex items-center rounded-3xl mx-auto bg-black/50 backdrop-blur-[6px]"
     >
       <!-- Header in Header (to have a fixed height for sub menu ) -->
       <div class="flex justify-between w-full">
@@ -963,7 +971,44 @@
     <!-- overlay -->
     <div class="overlay"></div>
     <!-- App Main -->
-    <div class="container"></div>
+    <main>
+      <section
+        class="relative h-[200px] xs:h-auto xs:aspect-[2/1] home bg-home-mobile md:bg-home-desktop bg-no-repeat bg-cover bg-[center_top]"
+      >
+        <div
+          class="container flex justify-end items-center md:min-h-screen h-full"
+        >
+          <div class="text-white">
+            <h2
+              class="font-morabbaDemiBold text-2xl sm:text-4xl md:text-5xl lg:text-6xl mb-0.5 md:mb-2"
+            >
+              قهوه عربیکا تانزانیا
+            </h2>
+            <h3
+              class="font-morabbaLight text-xl sm:text-3xl md:text-4xl lg:text-5xl"
+            >
+              یک فنجان بالانس!
+            </h3>
+            <span
+              class="block w-[100px] h-0.5 bg-orange-300 my-3 md:my-8"
+            ></span>
+
+            <p
+              class="text-xs sm:text-base md:text-xl lg:text-2xl max-w-[201px] md:max-w-[460px]"
+            >
+              قطعا نام آشنای عربیکا را شنیده اید‍‍، عربیکا یکی از گونه های قهوه
+              است که در نواحی مختلف کمربند قهوه کشت میشود.
+            </p>
+          </div>
+        </div>
+        <!-- Curve svg -->
+        <svg
+          class="absolute bottom-0 left-0 right-0 mx-auto text-gray-100 dark:text-zinc-800 w-[100px] h-[22px]"
+        >
+          <use href="#curve"></use>
+        </svg>
+      </section>
+    </main>
     <script type="text/javascript" src="./scripts/app.js"></script>
   </body>
 </html>
