adding hover to icons of the products section

--- a/public/index.html
+++ b/public/index.html
@@ -1063,6 +1063,7 @@
             class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 justify-center gap-3.5 md:gap-5 mt-5 md:mt-12"
           >
             <!-- Products -->
+
             <div class="bg-white dark:bg-zinc-700 rounded-2xl p-2 md:p-5">
               <!-- Product Image & Discount-->
               <div class="relative">
@@ -1103,24 +1104,29 @@
                   >
                 </div>
               </div>
+              <!-- Icons and Rating -->
               <div class="flex justify-between items-center">
                 <!-- shopping cart icon & arrows-left-right icon -->
                 <div class="flex items-center gap-2.5 md:3">
                   <!-- shopping cart icon -->
                   <div
-                    class="flex-center bg-gray-300 dark:bg-zinc-800 rounded-full w-[26px] h-[26px] md:w-9 md:h-9"
+                    class="group flex-center bg-gray-300 dark:bg-zinc-800 hover:bg-teal-600 dark:hover:bg-emerald-500 rounded-full w-[26px] h-[26px] md:w-9 md:h-9 transition-all"
                   >
-                    <svg class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400">
+                    <svg
+                      class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400 group-hover:text-white dark:group-hover:text-zinc-800 transition-all"
+                    >
                       <use href="#shopping-cart"></use>
                     </svg>
                   </div>
                   <!-- arrows-left-right icon -->
-                  <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
+                  <svg
+                    class="text-gray-400 dark:hover:text-emerald-500 hover:text-teal-600 w-4 h-4 md:w-6 md:h-6"
+                  >
                     <use href="#arrows-left-right"></use>
                   </svg>
                 </div>
                 <!-- Rating -->
-                <div class="flex items-center">
+                <div class="flex items-center cursor-pointer">
                   <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
                     <use href="#star"></use>
                   </svg>
@@ -1179,24 +1185,29 @@
                   >
                 </div>
               </div>
+              <!-- Icons and Rating -->
               <div class="flex justify-between items-center">
                 <!-- shopping cart icon & arrows-left-right icon -->
                 <div class="flex items-center gap-2.5 md:3">
                   <!-- shopping cart icon -->
                   <div
-                    class="flex-center bg-gray-300 dark:bg-zinc-800 rounded-full w-[26px] h-[26px] md:w-9 md:h-9"
+                    class="group flex-center bg-gray-300 dark:bg-zinc-800 hover:bg-teal-600 dark:hover:bg-emerald-500 rounded-full w-[26px] h-[26px] md:w-9 md:h-9 transition-all"
                   >
-                    <svg class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400">
+                    <svg
+                      class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400 group-hover:text-white dark:group-hover:text-zinc-800 transition-all"
+                    >
                       <use href="#shopping-cart"></use>
                     </svg>
                   </div>
                   <!-- arrows-left-right icon -->
-                  <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
+                  <svg
+                    class="text-gray-400 dark:hover:text-emerald-500 hover:text-teal-600 w-4 h-4 md:w-6 md:h-6"
+                  >
                     <use href="#arrows-left-right"></use>
                   </svg>
                 </div>
                 <!-- Rating -->
-                <div class="flex items-center">
+                <div class="flex items-center cursor-pointer">
                   <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
                     <use href="#star"></use>
                   </svg>
@@ -1255,24 +1266,29 @@
                   >
                 </div>
               </div>
+              <!-- Icons and Rating -->
               <div class="flex justify-between items-center">
                 <!-- shopping cart icon & arrows-left-right icon -->
                 <div class="flex items-center gap-2.5 md:3">
                   <!-- shopping cart icon -->
                   <div
-                    class="flex-center bg-gray-300 dark:bg-zinc-800 rounded-full w-[26px] h-[26px] md:w-9 md:h-9"
+                    class="group flex-center bg-gray-300 dark:bg-zinc-800 hover:bg-teal-600 dark:hover:bg-emerald-500 rounded-full w-[26px] h-[26px] md:w-9 md:h-9 transition-all"
                   >
-                    <svg class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400">
+                    <svg
+                      class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400 group-hover:text-white dark:group-hover:text-zinc-800 transition-all"
+                    >
                       <use href="#shopping-cart"></use>
                     </svg>
                   </div>
                   <!-- arrows-left-right icon -->
-                  <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
+                  <svg
+                    class="text-gray-400 dark:hover:text-emerald-500 hover:text-teal-600 w-4 h-4 md:w-6 md:h-6"
+                  >
                     <use href="#arrows-left-right"></use>
                   </svg>
                 </div>
                 <!-- Rating -->
-                <div class="flex items-center">
+                <div class="flex items-center cursor-pointer">
                   <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
                     <use href="#star"></use>
                   </svg>
@@ -1331,24 +1347,29 @@
                   >
                 </div>
               </div>
+              <!-- Icons and Rating -->
               <div class="flex justify-between items-center">
                 <!-- shopping cart icon & arrows-left-right icon -->
                 <div class="flex items-center gap-2.5 md:3">
                   <!-- shopping cart icon -->
                   <div
-                    class="flex-center bg-gray-300 dark:bg-zinc-800 rounded-full w-[26px] h-[26px] md:w-9 md:h-9"
+                    class="group flex-center bg-gray-300 dark:bg-zinc-800 hover:bg-teal-600 dark:hover:bg-emerald-500 rounded-full w-[26px] h-[26px] md:w-9 md:h-9 transition-all"
                   >
-                    <svg class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400">
+                    <svg
+                      class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400 group-hover:text-white dark:group-hover:text-zinc-800 transition-all"
+                    >
                       <use href="#shopping-cart"></use>
                     </svg>
                   </div>
                   <!-- arrows-left-right icon -->
-                  <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
+                  <svg
+                    class="text-gray-400 dark:hover:text-emerald-500 hover:text-teal-600 w-4 h-4 md:w-6 md:h-6"
+                  >
                     <use href="#arrows-left-right"></use>
                   </svg>
                 </div>
                 <!-- Rating -->
-                <div class="flex items-center">
+                <div class="flex items-center cursor-pointer">
                   <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
                     <use href="#star"></use>
                   </svg>
@@ -1407,24 +1428,29 @@
                   >
                 </div>
               </div>
+              <!-- Icons and Rating -->
               <div class="flex justify-between items-center">
                 <!-- shopping cart icon & arrows-left-right icon -->
                 <div class="flex items-center gap-2.5 md:3">
                   <!-- shopping cart icon -->
                   <div
-                    class="flex-center bg-gray-300 dark:bg-zinc-800 rounded-full w-[26px] h-[26px] md:w-9 md:h-9"
+                    class="group flex-center bg-gray-300 dark:bg-zinc-800 hover:bg-teal-600 dark:hover:bg-emerald-500 rounded-full w-[26px] h-[26px] md:w-9 md:h-9 transition-all"
                   >
-                    <svg class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400">
+                    <svg
+                      class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400 group-hover:text-white dark:group-hover:text-zinc-800 transition-all"
+                    >
                       <use href="#shopping-cart"></use>
                     </svg>
                   </div>
                   <!-- arrows-left-right icon -->
-                  <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
+                  <svg
+                    class="text-gray-400 dark:hover:text-emerald-500 hover:text-teal-600 w-4 h-4 md:w-6 md:h-6"
+                  >
                     <use href="#arrows-left-right"></use>
                   </svg>
                 </div>
                 <!-- Rating -->
-                <div class="flex items-center">
+                <div class="flex items-center cursor-pointer">
                   <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
                     <use href="#star"></use>
                   </svg>
@@ -1483,24 +1509,29 @@
                   >
                 </div>
               </div>
+              <!-- Icons and Rating -->
               <div class="flex justify-between items-center">
                 <!-- shopping cart icon & arrows-left-right icon -->
                 <div class="flex items-center gap-2.5 md:3">
                   <!-- shopping cart icon -->
                   <div
-                    class="flex-center bg-gray-300 dark:bg-zinc-800 rounded-full w-[26px] h-[26px] md:w-9 md:h-9"
+                    class="group flex-center bg-gray-300 dark:bg-zinc-800 hover:bg-teal-600 dark:hover:bg-emerald-500 rounded-full w-[26px] h-[26px] md:w-9 md:h-9 transition-all"
                   >
-                    <svg class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400">
+                    <svg
+                      class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400 group-hover:text-white dark:group-hover:text-zinc-800 transition-all"
+                    >
                       <use href="#shopping-cart"></use>
                     </svg>
                   </div>
                   <!-- arrows-left-right icon -->
-                  <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
+                  <svg
+                    class="text-gray-400 dark:hover:text-emerald-500 hover:text-teal-600 w-4 h-4 md:w-6 md:h-6"
+                  >
                     <use href="#arrows-left-right"></use>
                   </svg>
                 </div>
                 <!-- Rating -->
-                <div class="flex items-center">
+                <div class="flex items-center cursor-pointer">
                   <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
                     <use href="#star"></use>
                   </svg>
@@ -1559,24 +1590,29 @@
                   >
                 </div>
               </div>
+              <!-- Icons and Rating -->
               <div class="flex justify-between items-center">
                 <!-- shopping cart icon & arrows-left-right icon -->
                 <div class="flex items-center gap-2.5 md:3">
                   <!-- shopping cart icon -->
                   <div
-                    class="flex-center bg-gray-300 dark:bg-zinc-800 rounded-full w-[26px] h-[26px] md:w-9 md:h-9"
+                    class="group flex-center bg-gray-300 dark:bg-zinc-800 hover:bg-teal-600 dark:hover:bg-emerald-500 rounded-full w-[26px] h-[26px] md:w-9 md:h-9 transition-all"
                   >
-                    <svg class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400">
+                    <svg
+                      class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400 group-hover:text-white dark:group-hover:text-zinc-800 transition-all"
+                    >
                       <use href="#shopping-cart"></use>
                     </svg>
                   </div>
                   <!-- arrows-left-right icon -->
-                  <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
+                  <svg
+                    class="text-gray-400 dark:hover:text-emerald-500 hover:text-teal-600 w-4 h-4 md:w-6 md:h-6"
+                  >
                     <use href="#arrows-left-right"></use>
                   </svg>
                 </div>
                 <!-- Rating -->
-                <div class="flex items-center">
+                <div class="flex items-center cursor-pointer">
                   <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
                     <use href="#star"></use>
                   </svg>
@@ -1641,19 +1677,23 @@
                 <div class="flex items-center gap-2.5 md:3">
                   <!-- shopping cart icon -->
                   <div
-                    class="flex-center bg-gray-300 dark:bg-zinc-800 rounded-full w-[26px] h-[26px] md:w-9 md:h-9"
+                    class="group flex-center bg-gray-300 dark:bg-zinc-800 hover:bg-teal-600 dark:hover:bg-emerald-500 rounded-full w-[26px] h-[26px] md:w-9 md:h-9 transition-all"
                   >
-                    <svg class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400">
+                    <svg
+                      class="w-3 h-3 md:w-[22px] md:h-[22px] text-gray-400 group-hover:text-white dark:group-hover:text-zinc-800 transition-all"
+                    >
                       <use href="#shopping-cart"></use>
                     </svg>
                   </div>
                   <!-- arrows-left-right icon -->
-                  <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
+                  <svg
+                    class="text-gray-400 dark:hover:text-emerald-500 hover:text-teal-600 w-4 h-4 md:w-6 md:h-6"
+                  >
                     <use href="#arrows-left-right"></use>
                   </svg>
                 </div>
                 <!-- Rating -->
-                <div class="flex items-center">
+                <div class="flex items-center cursor-pointer">
                   <svg class="text-gray-400 w-4 h-4 md:w-6 md:h-6">
                     <use href="#star"></use>
                   </svg>
