--- a/public/index.html
+++ b/public/index.html
@@ -2373,16 +2373,19 @@
       </section>
       <section class="coffee-club mb-8 md:mb-20">
         <div class="container">
+          <!-- Coffee Club Container -->
           <div
             class="bg-gradient-to-r from-emerald-500 to-emerald-600 flex xl:flex-row gap-y-[35px] justify-between items-center flex-col px-4 py-8 sm:px-11 sm:py-[23px] rounded-2xl"
           >
+            <!-- Part one of coffe club -->
             <div class="flex gap-x-6 sm:gap-x-3 gap-y-0.5 md:gap-y-2">
+              <!-- Dimond Icon -->
               <img
                 src="./images/club/diamond.png"
                 class="w-[87px] h-[78px] sm:w-auto sm:h-auto inline-block"
                 alt=""
               />
-
+              <!-- Coffe Club's Titles -->
               <div>
                 <h2
                   class="font-morabbaDemiBold text-2xl sm:text-5xl text-white"
@@ -2395,9 +2398,11 @@
                 >
               </div>
             </div>
+            <!-- Part two of coffe club -->
             <div
               class="flex justify-center items-center gap-x-3 md:gap-x-[110px]"
             >
+              <!-- Coffee Club Options -->
               <div
                 class="flex justify-between items-center gap-x-1 xs:gap-x-2 sm:gap-x-5"
               >
@@ -2426,6 +2431,7 @@
                   <span class="text-xs sm:text-sm">چرخ و بخت</span>
                 </div>
               </div>
+              <!--  Score In Coffe Club-->
               <div class="text-white flex flex-col">
                 <span
                   class="font-danaSemiBold text-2xl sm:text-3xl -mb-1 sm:mb-0"
