category items sizing bug

--- a/public/index.html
+++ b/public/index.html
@@ -862,7 +862,8 @@
         </svg>
         <!-- Cart Menu-->
         <div
-          class="cart-menu flex flex-col fixed z-20 -left-64 top-0 bg-white dark:bg-zinc-700 w-64 px-3 pt-3 pb-5 transition-all h-screen overflow-y-auto"
+          class="cart-menu flex flex-col fixed z-20 -left-64 top-0 bg-white dark:bg-zinc-700 w-64 px-3 pt-3 pb-5 transition-all h-screen
+           overflow-y-auto"
         >
           <!-- Cart Menu Header -->
           <div
@@ -1783,7 +1784,7 @@
       <section class="category-items md:mb-20 mb-10">
         <div class="container">
           <div class="flex flex-wrap justify-center gap-[29px] md:gap-[65px]">
-            <a href="#"
+            <a href="#" class="max-w-24 md:max-w-max"
               ><img
                 src="./images/categories/category1.png"
                 class="block w-[100px] md:w-[200px]"
@@ -1794,7 +1795,7 @@
                 >قهوه دمی و اسپرسو</span
               ></a
             >
-            <a href="#"
+            <a href="#" class="max-w-24 md:max-w-max"
               ><img
                 src="./images/categories/category2.png"
                 class="block w-[100px] md:w-[200px]"
@@ -1805,7 +1806,7 @@
                 >لوازم جانبی و تجهیزات</span
               ></a
             >
-            <a href="#"
+            <a href="#" class="max-w-24 md:max-w-max"
               ><img
                 src="./images/categories/category3.png"
                 class="block w-[100px] md:w-[200px]"
@@ -1816,7 +1817,7 @@
                 >اسپرسو ساز</span
               ></a
             >
-            <a href="#"
+            <a href="#" class="max-w-24 md:max-w-max"
               ><img
                 src="./images/categories/category4.png"
                 class="block w-[100px] md:w-[200px]"
@@ -1827,7 +1828,7 @@
                 >پک تستر قهوه</span
               ></a
             >
-            <a href="#"
+            <a href="#" class="max-w-24 md:max-w-max"
               ><img
                 src="./images/categories/category5.png"
                 class="block w-[100px] md:w-[200px]"
@@ -2375,14 +2376,14 @@
         <div class="container">
           <!-- Coffee Club Container -->
           <div
-            class="bg-gradient-to-r from-emerald-500 to-emerald-600 flex xl:flex-row gap-y-[35px] justify-between items-center flex-col px-4 py-8 sm:px-11 sm:py-[23px] rounded-2xl"
+            class="bg-gradient-to-r from-emerald-500 to-emerald-600 flex lg:flex-row gap-y-[35px] justify-between items-center flex-col px-4 py-8 sm:px-11 sm:py-[23px] rounded-2xl"
           >
             <!-- Part one of coffe club -->
             <div class="flex gap-x-6 sm:gap-x-3 gap-y-0.5 md:gap-y-2">
               <!-- Dimond Icon -->
               <img
                 src="./images/club/diamond.png"
-                class="w-[87px] h-[78px] sm:w-auto sm:h-auto inline-block"
+                class="w-[87px] h-[78px] xl:w-auto xl:h-auto block"
                 alt=""
               />
               <!-- Coffe Club's Titles -->
@@ -2400,7 +2401,7 @@
             </div>
             <!-- Part two of coffe club -->
             <div
-              class="flex justify-center items-center gap-x-3 md:gap-x-[110px]"
+              class="flex justify-center items-center gap-x-3 sm:gap-x-10 xl:gap-x-[110px]"
             >
               <!-- Coffee Club Options -->
               <div
@@ -2432,7 +2433,7 @@
                 </div>
               </div>
               <!--  Score In Coffe Club-->
-              <div class="text-white flex flex-col">
+              <div class="text-white flex flex-col text-center">
                 <span
                   class="font-danaSemiBold text-2xl sm:text-3xl -mb-1 sm:mb-0"
                   >۵۴۲</span
